<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#D83B31"
    tools:context="tcc.aplicativo.Inicio"
    >


    <Button
        android:text="@string/bt_entrar"
        android:id="@+id/bt_entrar"
        android:layout_marginTop="48dp"
        style="@style/Buttons"
        android:layout_below="@+id/et_senha"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/bt_cadastre_se"
        android:id="@+id/bt_cadastre_se"
        style="@style/Buttons"
        android:layout_below="@+id/bt_entrar"
        android:layout_alignLeft="@+id/bt_entrar"
        android:layout_alignStart="@+id/bt_entrar" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_senha"
        android:hint="@string/et_senha"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:height="80dp"
        android:width="300dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="#FAFAFA"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_usuario"
        android:hint="@string/et_usuario"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="155dp"
        android:layout_alignLeft="@+id/et_senha"
        android:layout_alignStart="@+id/et_senha"
        android:layout_alignRight="@+id/et_senha"
        android:layout_alignEnd="@+id/et_senha"
        android:theme="@android:style/Widget.Material.Light.EditText"
        android:textColor="#fffee6"
        android:textColorHighlight="#fffee6"
        android:textColorHint="#fffee6"
        android:textColorLink="#fffee6"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_entrar_com_facebook"
        android:id="@+id/bt_entrar_facebook"
        android:layout_below="@+id/bt_cadastre_se"
        android:layout_centerHorizontal="true"
        android:background="#3b5998"
        android:singleLine="true"
        android:textColor="#fdf9ff" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/marca_horizontal"
        android:contentDescription="marca_horizontal"
        android:src="@drawable/marca_vertical"
        android:layout_alignBottom="@+id/et_usuario"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp" />

</RelativeLayout>
